# Damn-Vulnerable-Drone

./: .gitignore  LICENSE  Readme.md  docker-compose.yaml  install.sh  kali-install.sh  scenarios  start.sh  status.sh  stop.sh  ubuntu-install.sh
companion-computer/: Dockerfile  hostapd.conf  init  isc-dhcp-server  start-companion.sh  start-server.sh
companion-computer/conf/: dhcpd.conf  dnsmasq.conf  hostapd.conf  mavlink-router.conf  sshd_config
companion-computer/interface/: app.py  config.json  mavlink_connection.py  models.py  rtsp.py  video.py
companion-computer/interface/routes/: camera.py  config.py  logs.py  telemetry.py  wifi.py
companion-computer/interface/static/js/: cameraStream.js  flightController.js  flightLogs.js
companion-computer/interface/templates/: base.html  cameraStream.html  flightController.html  flightLogs.html  index.html  login.html  wifiNetwork.html
companion-computer/interface/tests/: serialDevices.py
flight-controller/: Dockerfile  backup.param  drone.parm  init.sh
ground-control-station/: Dockerfile  init  init.sh  manual_control.py  start.sh  wpa_supplicant.conf
ground-control-station/conf/: wpa_supplicant.conf
ground-control-station/missions/: waypoints_circle.txt
ground-control-station/stages/: arm-and-takeoff.py  autopilot-flight.py  autopilot-flight2.py  operator-flight.py  return-to-land.py
qgc/: Dockerfile  aptDeps.txt  entrypoint.sh
qgc/config/: QGroundControl.ini
simulator/: Dockerfile  Dockerfile-Gazebo11  damn-vulnerable-drone.launch  hills.world
simulator/assets/: gz3d.css
simulator/assets/models/drone/: drone_model.sdf
simulator/assets/models/gcs_chair/: model.config  model.sdf
simulator/assets/models/gcs_table/: model.config  model.sdf
simulator/assets/models/gimbal_small_2d/: model.sdf
simulator/assets/worlds/: damn-vulnerable-drone.world  dvd.world  dvd2.world
simulator/gzweb/: .eslintrc.js  .hgignore  .jshintrc  CMakeLists.txt  Gruntfile.js  README.md  coarse_meshes.sh  deploy.sh  get_local_models.py  karma.conf.js  package.json  webify_models.py  webify_models_v2.py
simulator/gzweb/cmake/: cmake_uninstall.cmake.in
simulator/gzweb/examples/: embedded_scene.html  view_sdf_from_url.html
simulator/gzweb/gz3d/: CMakeLists.txt
simulator/gzweb/gz3d/client/: index.html
simulator/gzweb/gz3d/client/js/include/: ColladaLoader.js  OrbitControls.js  STLLoader.js  roslib.js  roslib.min.js  three.compat.js  xml2json.js
simulator/gzweb/gz3d/client/style/: gz3d.css
simulator/gzweb/gz3d/src/: gz.js  gzgui.js  gziface.js  gzlogplay.js  gzmanipulator.js  gzradialmenu.js  gzscene.js  gzsdfparser.js  gzshaders.js  gzspawnmodel.js
simulator/gzweb/gz3d/test/: gz_test.js  gzgui_test.js  gziface_test.js  gzlogplay_test.js  gzscene_test.js  gzsdfparser_test.js  spec_helper.js
simulator/gzweb/gz3d/test/fixture/: jquery-holder.js  myfixture.html
simulator/gzweb/gz3d/test/utils/: angular-mocks.min.js
simulator/gzweb/gz3d/test/utils/beer/: model.sdf
simulator/gzweb/gz3d/test/utils/house_2/: model.sdf
simulator/gzweb/gz3d/test/utils/house_2/meshes/: house_2_coarse.dae
simulator/gzweb/gz3d/test/utils/husky/: model.sdf
simulator/gzweb/gz3d/test/utils/walkway_metal_straight/meshes/: mesh.mtl
simulator/gzweb/gzbridge/: CMakeLists.txt  ConfigLoader.cc  ConfigLoader.hh  GZNode.cc  GZNode.hh  GazeboInterface.cc  GazeboInterface.hh  OgreMaterialParser.cc  OgreMaterialParser.hh  binding.gyp  pb2json.cc  pb2json.hh  server.js
simulator/gzweb/tools/: CMakeLists.txt  green.world  gzcoarse.cc  gzthumbnails.sh  nanoflann.hpp
simulator/mgmt/: Pipfile  app.py  extensions.py  models.py  routes.py
simulator/mgmt/pages/: index.html
(+150 files in other folders)
